[tool.poetry]
name = "dummy_plugin"
version = "1.0.0"
description = "Nautobot example plugin that does a whole lot of nothing."
authors = ["Network to Code <opensource@networktocode.com>"]
license = "Apache-2.0"
packages = [
    {include = "dummy_plugin"}
]

# Register the Constant class in dummy_plugin.secrets as a provider for Secrets of type "constant-value"
[tool.poetry.plugins."nautobot.secrets.providers"]
"constant-value" = "dummy_plugin.secrets:ConstantSecretProvider"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "~3.4.0", python = "<3.8"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
