[tool.poetry]
name = "example_plugin"
version = "1.0.0"
description = "Nautobot example plugin that does a whole lot of nothing."
authors = ["Network to Code <opensource@networktocode.com>"]
license = "Apache-2.0"
packages = [
    {include = "example_plugin"}
]

[tool.poetry.dependencies]
python = "^3.7"
# NOTE: This mimics the version required by core, although any version 1.0+ is sufficient for example_plugin
#       As a direct dependency on importlib-metadata it should be specified here and in most cases a plugin can
#       benefit from a transient dependency from core.
importlib-metadata = {version = "^4.4", python = "<3.8"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
